# circom-witnesscalc

./: .gitignore  Cargo.toml  README.md  build.rs  test_circuits.sh  test_circuits_vm.sh  test_circuits_vm2.sh
extensions/build-circuit/: Cargo.toml
extensions/build-circuit/src/: main.rs
extensions/compiler/: Cargo.toml
extensions/compiler/src/: main.rs
src/: ast.rs  field.rs  graph.rs  lib.rs  storage.rs  vm.rs  vm2.rs
src/parser/: mod.rs
src/storage/: proto_deserializer.rs
test_circuits/: circuit16_function_call.circom  circuit22_function_call.circom
